fix(ui/chats): align member list to top

--- a/ui/internal/src/pages/chats-me-page/chats-me-page.sass
+++ b/ui/internal/src/pages/chats-me-page/chats-me-page.sass
@@ -38,7 +38,8 @@
 .chats-me-page__members
   display: flex
   flex: 1
-  flex-direction: column-reverse
+  flex-direction: column
+  justify-content: flex-start
   gap: 10px
   min-height: 0
   overflow-y: auto
